# case-analytics-engineer

solution/: Dockerfile  README.md  dbt_project.yml  pyproject.toml
solution/models/sales/: dim_customers.csv  dim_customers.sql  dim_monthly_cohorts.csv  dim_monthly_cohorts.sql  fct_sales.csv  fct_sales.sql
solution/models/stg/: stg_orders.sql
